FIX anchors and alignments

--- a/docs/assets/css/desktop-nimiq.css
+++ b/docs/assets/css/desktop-nimiq.css
@@ -42,3 +42,6 @@ div#SITE_PAGES div#comp-j6w6mgy9 a {
     display:inline-block;
 }
 
+div#comp-kij0sk70 a {
+    text-decoration: none !important;
+}
