--- a/docs/assets/css/mobile-nimiq.css
+++ b/docs/assets/css/mobile-nimiq.css
@@ -50,3 +50,7 @@ div#SITE_PAGES div#comp-j6w6mgy9 a {
     display: inline-block;
     /*display: block;*/
 }
+
+div#comp-kij0sk70 a {
+    text-decoration: none !important;
+}
